fix overflow issues but not centering whiteboard currently

--- a/client/src/styles/shareLinkBox.css
+++ b/client/src/styles/shareLinkBox.css
@@ -1,11 +1,12 @@
-.canvas-container {
+#canvas-container {
     background-color: gray;
     position: relative;
+    top: 56px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: calc(100% - 56px);
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
 }
 
 .drawing-board {
